@@ -8,8 +8,19 @@
             "thunderbird"
         ],
         "fix": {
+            "audio-recorder": "general",
+            "emby": "general",
+            "gajim": "general",
+            "hipchat": "general",
+            "hedgewars": "general",
             "libreoffice": "general",
+            "makemkv": "general",
+            "obs-studio": "general",
+            "playonlinux": "general",
+            "ubuntu-sdk": "general",
+            "veracrypt": "general",
             "virtualbox": "general",
+            "wine-devel": "general",
             "wireshark": "general"
         }
     },
