@@ -2,6 +2,9 @@ ubuntu-mate-welcome (16.10.8~yakkety1.1) UNRELEASED; urgency=medium
 
   [ Martin Wimpress ]
   * New upstream release.
+  * Update Audio Recorder, Gajim, Hedgewars, HipChat, MakeMKV, OBS Studio,
+    Play on Linux, Ubuntu SDK, Veracrypt and Wine Devel for Yakkety.
+  * Update Emby for Xenial.
   * Sync translations.
 
   [ Luke Horwell ]
